--- a/expose/client/src/scss/layouts/Shared.scss
+++ b/expose/client/src/scss/layouts/Shared.scss
@@ -17,4 +17,16 @@
 
 .pdf-viewer {
   text-align: center;
+
+  .pdf-controls {
+    line-height: 200%;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 42px;
+
+    .btn {
+      font-weight: 700;
+    }
+  }
 }
