PS-326 expose: support long publication titles in nav bar

--- a/expose/client/src/scss/Nav.scss
+++ b/expose/client/src/scss/Nav.scss
@@ -30,6 +30,11 @@ $defaultPadding: 10px;
 .nav-item {
   display: block;
   padding: $defaultPadding;
+  word-break: break-all;
+
+  &.has-children {
+    padding-right: 45px;
+  }
 
   &:hover {
     background-color: rgba(#000, 0.05);
